# aizen

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  agent.json  index.html  mkdocs.yml  pyproject.toml  run.py  runOld.py  sitemap.xml  task.json  theme_version.html
assets/: dmvendor.css  highlight_init.js  styles.css
basic/installation/: index.html
basic/quickstart/: index.html
concepts/features/: index.html
concepts/next-gen-agents/: index.html
development/: LICENSE
development/contributing/: index.html
development/python-ecosystem/: index.html
docs/: examples.md  getting-started.md  index.md  platform.md
docs/basic/: installation.md
docs/concepts/: features.md  next-gen-agents.md
docs/development/: LICENSE  contributing.md  python-ecosystem.md
docs/examples/: agent-examples.md  applications.md
docs/getting-started/: installation.md  quickstart.md
examples/: index.html
examples/agent-examples/: index.html
examples/applications/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
platform/: index.html
search/: search_index.json
src/: function_definitions.json  function_registry.py  generate_function_definitions.py
src/aizen/: __init__.py  function_definitions.json
src/aizen/agents/: __init__.py  agentrunner.py  base.py  baseOld.py  cryptoecho.agent.json  cryptopulse.agent.json  cryptotrader.agent.json  fetch_news_and_tweet.task.json  news_commentary_agent.py  test.py  twitter.task.json
src/aizen/agents/configs/: cryptoecho.agent.json  cryptopulse.agent.json  cryptotrader.agent.json
src/aizen/chains/: base.py  bsc.py  ethereum.py  solana.py
src/aizen/chains/utils/: wallet.py
src/aizen/data/analytics/: defillama.py
src/aizen/data/news/: blockworks.py  theblock.py
src/aizen/data/vc_portfolio/: base.py  binance_labs.py  dcg.py  multicoin.py  pantera.py  paradigm.py
src/aizen/protocols/: pancakeswapv2.py  raydium.py  uniswapv2.py
src/aizen/social/: twitter_client.py  twitterclient.py
