[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aizen"
version = "0.1.0"
description = "Web3 AI Agent Platform with powerful tools and realtime data"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "web3>=6.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.39.0",
    "lxml>=4.9.0",
    "eth-account>=0.8.0",
    "solana>=0.30.0",
    "base58>=2.1.1",
    "solders>=0.18.0",
    "construct>=2.10.68",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocs-terminal>=4.7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3